add amocrm intergation

--- a/templates/header.html
+++ b/templates/header.html
@@ -18,7 +18,7 @@
                 {% endif %}
             </div>
             <ul class="mobile-nav">
-                <li class="active"><a href="#">Главная</a></li>
+                <li class="active"><a href="/">Главная</a></li>
                 <li><a href="{% url 'prices' %}">Цены и сроки</a></li>
                 <li><a href="#">Способы оплаты</a></li>
                 <li><a href="#">Отзывы</a></li>
@@ -30,7 +30,7 @@
     <div class="header-dropdown fixed">
         <img src="{% static 'images/icons/EDE.png' %}" alt="">
         <ul class="nav">
-            <li class="active"><a href="#">Главная</a></li>
+            <li class="active"><a href="/">Главная</a></li>
             <li><a href="{% url 'prices' %}">Цены и сроки</a></li>
             <li><a href="#">Способы оплаты</a></li>
             <li><a href="#">Отзывы</a></li>
