--- a/templates/header_index.html
+++ b/templates/header_index.html
@@ -37,7 +37,7 @@
                 {% endif %}
             </div>
             <ul class="mobile-nav">
-                <li class="active"><a href="#">Главная</a></li>
+                <li class="active"><a href="/">Главная</a></li>
                 <li><a href="{% url 'prices' %}">Цены и сроки</a></li>
                 <li><a href="#">Способы оплаты</a></li>
                 <li><a href="#">Отзывы</a></li>
@@ -49,7 +49,7 @@
     <div class="header-dropdown">
         <img src="{% static 'images/icons/EDE.png' %}" alt="">
         <ul class="nav">
-            <li class="active"><a href="#">Главная</a></li>
+            <li class="active"><a href="/">Главная</a></li>
             <li><a href="{% url 'prices' %}">Цены и сроки</a></li>
             <li><a href="#">Способы оплаты</a></li>
             <li><a href="#">Отзывы</a></li>
