--- a/templates/pages/contacts.html
+++ b/templates/pages/contacts.html
@@ -26,7 +26,7 @@
     <div class="container">
         <div class="breadcrumbs">
             <ul>
-                <li><a href="#">Главная</a></li>
+                <li><a href="/">Главная</a></li>
                 <li class="active">Контакты</li>
             </ul>
         </div>
